landing page alignment fix

--- a/app/components/landing/Landing.module.css
+++ b/app/components/landing/Landing.module.css
@@ -3,9 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   height: 100svh;
   width: 100%;
-  position: relative;
 }
 .overlay{
   background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
@@ -30,7 +30,9 @@
   position: relative;
   z-index: 1;
   width: 100%;
-  height: 60vh;
+  height: 400px;
+  min-height: 260px;
+  max-height: 500px;
 }
 
 .circlesContainer > img{
@@ -69,6 +71,8 @@
 
 
 .buttonContainer{
+  position: relative;
+  margin-bottom: 2vh;
   display: flex;
   align-items: center;
   justify-content: center;
